--- a/package.json
+++ b/package.json
@@ -22,9 +22,6 @@
         "gmail chrome extension",
         "gmail firefox extension"
     ],
-    "dependencies": {
-        "jquery": "^3.3.1"
-    },
     "devDependencies": {
         "@types/jquery": "^1.10.27",
         "eslint": "^3.10.2",
@@ -37,5 +34,6 @@
     "bugs": {
         "url": "https://github.com/KartikTalwar/gmail.js/issues"
     },
-    "homepage": "https://github.com/KartikTalwar/gmail.js"
+    "homepage": "https://github.com/KartikTalwar/gmail.js",
+    "dependencies": {}
 }
